# t86-with-debug

./: .gitignore  Dockerfile  Dockerfile-arch  Doxyfile  README.md
docs/: debugging.md  source-info.md  (+3 more)
src/: .gitignore  CMakeLists.txt
src/benchmarks/: CMakeLists.txt  README.md  bench_lib.h  native_bench.cpp  t86_bench.cpp
src/benchmarks/benches/: prime.t86  quicksort.t86
src/common/: CMakeLists.txt  TCP.h  config.cpp  config.h  helpers.h  parsing.cpp  parsing.h
src/dbg-cli/: CLI.h  CMakeLists.txt  main.cpp
src/dbg-cli/tests/: breakpoints.ref  expressions.in  expressions.ref  limited-source-information.in  limited-source-information.ref  native.in  native.ref  no-source-info1.conf  no-source-info1.ref  no-source-info2.conf  no-source-info2.in  no-source-info2.ref  repeated_runs.ref  running.in  source.conf  source.in  source.ref  strings1.conf  strings1.ref  structured-type.conf  structured-type.in  structured-type.ref  watchpoints.in  watchpoints.ref
src/dbg-cli/tests/sources/: char_ptr.t86  linked_list.t86  llvm.ir  mixed_types.t86  no_debug_info.t86  only_lines.t86  swap.t86
src/dbg-cli/utility/: linenoise.h
src/debugger/: Arch.h  CMakeLists.txt  DebugEvent.h  DebuggerError.h  Native.cpp  Native.h  Process.h  README.md  T86Process.cpp  T86Process.h  Watchpoint.h
src/debugger/Source/: Die.h  Expression.cpp  Expression.h  ExpressionParser.cpp  LineMapping.cpp  LineMapping.h  Parser.h  Source.cpp  SourceFile.cpp  SourceFile.h  Type.h
src/debugger/Tests/: bug.t86  location.tc  swap.t86  swap.tc  var_setting.t86  var_setting.tc
src/scripts/: run_dbg_tests.sh  run_t86_tests.sh
src/t86/: config.cpp  cpu.cpp  debug.cpp  debug.h  execution_error.h  instruction.cpp  instruction.h  interrupt_table.h  os.cpp  os.h  program.h
src/t86-cli/: CMakeLists.txt  README.md  main.cpp
src/t86-cli/tests/: basics1.in  binary_search.in  floats1.in  operands1.in  prime.in  quicksort.in  sub.in
src/t86-parser/: CMakeLists.txt  parser.cpp
src/t86/cpu/: alu.cpp  memory_writes_manager.h  register.cpp  register_allocation_table.cpp  register_allocation_table.h  reservation_station.cpp  reservation_station.h
src/t86/instructions/: operand.cpp  product.h  requirements.h
src/t86/program/: helpers.cpp  label.h
src/t86/utils/: stats_logger.cpp
src/tests/: CMakeLists.txt  MockMessenger.h
src/tests/debugger/: native_test.cpp  source_test.cpp  utils.h
src/tests/t86/: debug_test.cpp
t86/: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
t86/common/: CMakeLists.txt  TCP.h  config.cpp  config.h  helpers.h  logger.h  messenger.h  parser.h  parsing.cpp  parsing.h  threads_messenger.h
t86/dbg-cli/: CLI.h  CMakeLists.txt  main.cpp
t86/dbg-cli/scripts/: run_tests.sh
t86/dbg-cli/tests/: breakpoints.in  breakpoints.ref  limited-source-information.conf  limited-source-information.in  limited-source-information.ref  no-source-info.in  no-source-info1.in  no-source-info1.ref  no-source-info2.ref  repeated_runs.in  repeated_runs.ref  running.conf  running.ref  strings1.in  strings1.ref  structured-type.in  structured-type.ref  variables.in  variables.ref  watchpoints.ref
t86/dbg-cli/tests/sources/: binary_search.t86  char.t86  linked_list.t86  llvm.ir  mixed_types.t86  swap.t86
t86/debugger/: Arch.h  Breakpoint.h  CLI.h  CMakeLists.txt  DebugEvent.h  DebuggerError.h  Native.cpp  Native.h  Process.h  T86Process.cpp  T86Process.h  Watchpoint.h  main.cpp
t86/debugger/Docs/: source.md
t86/debugger/Source/: Die.h  Expression.cpp  Expression.h  ExpressionInterpreter.cpp  ExpressionInterpreter.h  ExpressionParser.cpp  ExpressionParser.h  LineMapping.h  LocExpr.h  LocationManager.cpp  LocationManager.h  Parser.cpp  Parser.h  Source.cpp  Source.h  SourceFile.h  Type.h
t86/debugger/Tests/: swap.t86  var_setting.tc
t86/debugger/utility/: linenoise.h
t86/scripts/: build.sh  check_format.sh  run_tests.sh
t86/t86/: CMakeLists.txt  README.md  config.cpp  cpu.cpp  cpu.h  debug.cpp  debug.h  execution_error.h  instruction.cpp  instruction.h  os.cpp  os.h  program.cpp  program.h  ram.cpp  ram.h
t86/t86-cli/: CMakeLists.txt  README.md  main.cpp  parser.h
t86/t86-cli/tests/: basics2.in  comments.in  cycle.in  data1.in  quicksort.ref  regs.in  regs.ref  sub.in
t86/t86-parser/: parser.cpp  parser.h
t86/t86/cpu/: alu.cpp  alu.h  branchpredictor.h  memory.h  memory_writes_manager.cpp  memory_writes_manager.h  register.cpp  register.h  register_allocation_table.cpp  register_allocation_table.h  reservation_station.cpp  reservation_station.h
t86/t86/cpu/branch_predictors/: naive_branch_predictor.cpp  naive_branch_predictor.h  simplebranchpredictor.hpp
t86/t86/cpu/memory_writes_manager/: memory_write.cpp  memory_write.h  memory_writes.cpp  memory_writes.h
t86/t86/instructions/: operand.cpp  operand.h  product.cpp  product.h  requirements.cpp  requirements.h
t86/t86/program/: helpers.cpp  helpers.h  label.h  programbuilder.h
t86/t86/utils/: stats_logger.cpp  stats_logger.h
t86/tests/: CMakeLists.txt  MockMessenger.h  debug_test.cpp  debugger_test.cpp  parser_test.cpp  utils_test.cpp
t86/tests/debugger/: expr_test.cpp  native_test.cpp  source_test.cpp  t86process_test.cpp  utils.h
t86/tests/t86/: debug_test.cpp  parser_test.cpp
tc/: .gitignore  CMakeLists.txt  README.md
tc/applications/ni-gen/: CMakeLists.txt  main.cpp
tc/common/: CMakeLists.txt  README.md  ast.h  colors.h  config.cpp  config.h  environment.h  helpers.h  interval.h  lexer.h  logger.h  named_entity.h  parser.h  symbol.cpp  symbol.h  tests.h  types.cpp  types.h
tc/fmt/: CMakeLists.txt
tc/scripts/: build.sh
tc/tinyC/: CMakeLists.txt  README.md  ast.cpp  ast.h  frontend.cpp  frontend.h  parser.cpp  parser.h  typechecker.h
tc/tinyC/backend/: basic_block.h  codegen.h  common.h  constant.cpp  constant.h  context.h  fun_arg.h  function.cpp  function.h  global_object.h  instruction.cpp  instruction.h  ir_builder.h  ir_visitor.h  opcode.h  operand.h  optimizations.h  pointers.h  register_allocator.cpp  register_allocator.h  tiny86_gen.h  type.h  value.cpp  value.h
(+34 files in other folders)
